--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,10 @@
   display: flex;
   justify-content: center;
   gap: 10px;
-  flex-wrap: wrap; 
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  width: 100%;
 }
 
 
@@ -58,9 +61,9 @@
 
 
 @media screen and (max-width: 576px) {
-  .button {
-    flex-direction: column;
-    align-items: center;
+   .button {
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 12px;
   }
 
